--- a/datadog/datadog.ipynb
+++ b/datadog/datadog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "[4 rows x 39 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {
     "scrolled": false
    },
@@ -487,7 +487,7 @@
        "[4 rows x 710 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {
     "scrolled": false
    },
@@ -728,7 +728,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {
     "scrolled": false
    },
@@ -998,7 +998,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1142,16 +1142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f086416dd50>"
+       "<matplotlib.legend.Legend at 0x7f08661387d0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1179,6 +1181,316 @@
     "\n",
     "plt.stackplot(df['Weeks'],colsList,labels=colsLabels)\n",
     "plt.legend(loc='upper left',title='EC2 Clusters',bbox_to_anchor=(1.05,1),borderaxespad=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>EC2-Name</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>22</th>\n",
+       "      <th>23</th>\n",
+       "      <th>24</th>\n",
+       "      <th>25</th>\n",
+       "      <th>26</th>\n",
+       "      <th>27</th>\n",
+       "      <th>28</th>\n",
+       "      <th>29</th>\n",
+       "      <th>30</th>\n",
+       "      <th>31</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>46116.212308</td>\n",
+       "      <td>35465.298462</td>\n",
+       "      <td>66631.604231</td>\n",
+       "      <td>25235.089231</td>\n",
+       "      <td>18991.743077</td>\n",
+       "      <td>16568.934231</td>\n",
+       "      <td>13909.653077</td>\n",
+       "      <td>5018.124615</td>\n",
+       "      <td>16287.980385</td>\n",
+       "      <td>4986.158077</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3524.363462</td>\n",
+       "      <td>3312.208077</td>\n",
+       "      <td>1882.269231</td>\n",
+       "      <td>2116.760385</td>\n",
+       "      <td>2500.714615</td>\n",
+       "      <td>2124.892692</td>\n",
+       "      <td>2855.731538</td>\n",
+       "      <td>2668.756923</td>\n",
+       "      <td>2887.268077</td>\n",
+       "      <td>1246.558846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>11729.287771</td>\n",
+       "      <td>7333.157613</td>\n",
+       "      <td>27583.579143</td>\n",
+       "      <td>5496.464600</td>\n",
+       "      <td>9609.905231</td>\n",
+       "      <td>4177.748299</td>\n",
+       "      <td>2732.998965</td>\n",
+       "      <td>8200.800217</td>\n",
+       "      <td>4255.639138</td>\n",
+       "      <td>7623.931429</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.811151</td>\n",
+       "      <td>99.098502</td>\n",
+       "      <td>597.784729</td>\n",
+       "      <td>305.268825</td>\n",
+       "      <td>115.815228</td>\n",
+       "      <td>329.049851</td>\n",
+       "      <td>90.988586</td>\n",
+       "      <td>280.120362</td>\n",
+       "      <td>2315.326510</td>\n",
+       "      <td>88.978910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>36888.260000</td>\n",
+       "      <td>20019.220000</td>\n",
+       "      <td>10701.870000</td>\n",
+       "      <td>17140.200000</td>\n",
+       "      <td>3140.840000</td>\n",
+       "      <td>8232.700000</td>\n",
+       "      <td>10832.640000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10341.070000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3326.570000</td>\n",
+       "      <td>3212.190000</td>\n",
+       "      <td>1027.820000</td>\n",
+       "      <td>1614.480000</td>\n",
+       "      <td>2289.510000</td>\n",
+       "      <td>1521.370000</td>\n",
+       "      <td>2659.180000</td>\n",
+       "      <td>1916.040000</td>\n",
+       "      <td>718.920000</td>\n",
+       "      <td>1117.070000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>37486.950000</td>\n",
+       "      <td>31510.530000</td>\n",
+       "      <td>49875.707500</td>\n",
+       "      <td>20454.525000</td>\n",
+       "      <td>13478.960000</td>\n",
+       "      <td>13063.680000</td>\n",
+       "      <td>10945.567500</td>\n",
+       "      <td>48.300000</td>\n",
+       "      <td>12371.512500</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3495.497500</td>\n",
+       "      <td>3214.850000</td>\n",
+       "      <td>1488.267500</td>\n",
+       "      <td>1864.520000</td>\n",
+       "      <td>2513.620000</td>\n",
+       "      <td>1881.600000</td>\n",
+       "      <td>2846.760000</td>\n",
+       "      <td>2775.860000</td>\n",
+       "      <td>1012.965000</td>\n",
+       "      <td>1117.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>43162.750000</td>\n",
+       "      <td>37681.930000</td>\n",
+       "      <td>70170.820000</td>\n",
+       "      <td>26573.740000</td>\n",
+       "      <td>19029.725000</td>\n",
+       "      <td>17509.695000</td>\n",
+       "      <td>13980.440000</td>\n",
+       "      <td>231.840000</td>\n",
+       "      <td>17635.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3497.090000</td>\n",
+       "      <td>3323.910000</td>\n",
+       "      <td>1824.825000</td>\n",
+       "      <td>2228.735000</td>\n",
+       "      <td>2521.665000</td>\n",
+       "      <td>2256.960000</td>\n",
+       "      <td>2846.760000</td>\n",
+       "      <td>2775.860000</td>\n",
+       "      <td>1872.270000</td>\n",
+       "      <td>1295.950000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>49319.570000</td>\n",
+       "      <td>40708.132500</td>\n",
+       "      <td>85979.490000</td>\n",
+       "      <td>28869.067500</td>\n",
+       "      <td>25701.747500</td>\n",
+       "      <td>20208.982500</td>\n",
+       "      <td>16652.950000</td>\n",
+       "      <td>12244.395000</td>\n",
+       "      <td>20163.155000</td>\n",
+       "      <td>15193.617500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3578.720000</td>\n",
+       "      <td>3428.812500</td>\n",
+       "      <td>2252.755000</td>\n",
+       "      <td>2321.260000</td>\n",
+       "      <td>2541.500000</td>\n",
+       "      <td>2289.712500</td>\n",
+       "      <td>2891.450000</td>\n",
+       "      <td>2775.860000</td>\n",
+       "      <td>4849.250000</td>\n",
+       "      <td>1313.210000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>85672.670000</td>\n",
+       "      <td>43960.750000</td>\n",
+       "      <td>107067.840000</td>\n",
+       "      <td>34643.330000</td>\n",
+       "      <td>39579.430000</td>\n",
+       "      <td>21167.600000</td>\n",
+       "      <td>16845.440000</td>\n",
+       "      <td>19080.400000</td>\n",
+       "      <td>21215.710000</td>\n",
+       "      <td>17706.230000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3720.530000</td>\n",
+       "      <td>3442.940000</td>\n",
+       "      <td>2797.790000</td>\n",
+       "      <td>2742.950000</td>\n",
+       "      <td>2851.070000</td>\n",
+       "      <td>2618.760000</td>\n",
+       "      <td>3095.740000</td>\n",
+       "      <td>2775.860000</td>\n",
+       "      <td>7205.020000</td>\n",
+       "      <td>1329.070000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "EC2-Name            1             2              3             4   \\\n",
+       "count        26.000000     26.000000      26.000000     26.000000   \n",
+       "mean      46116.212308  35465.298462   66631.604231  25235.089231   \n",
+       "std       11729.287771   7333.157613   27583.579143   5496.464600   \n",
+       "min       36888.260000  20019.220000   10701.870000  17140.200000   \n",
+       "25%       37486.950000  31510.530000   49875.707500  20454.525000   \n",
+       "50%       43162.750000  37681.930000   70170.820000  26573.740000   \n",
+       "75%       49319.570000  40708.132500   85979.490000  28869.067500   \n",
+       "max       85672.670000  43960.750000  107067.840000  34643.330000   \n",
+       "\n",
+       "EC2-Name            5             6             7             8   \\\n",
+       "count        26.000000     26.000000     26.000000     26.000000   \n",
+       "mean      18991.743077  16568.934231  13909.653077   5018.124615   \n",
+       "std        9609.905231   4177.748299   2732.998965   8200.800217   \n",
+       "min        3140.840000   8232.700000  10832.640000      0.000000   \n",
+       "25%       13478.960000  13063.680000  10945.567500     48.300000   \n",
+       "50%       19029.725000  17509.695000  13980.440000    231.840000   \n",
+       "75%       25701.747500  20208.982500  16652.950000  12244.395000   \n",
+       "max       39579.430000  21167.600000  16845.440000  19080.400000   \n",
+       "\n",
+       "EC2-Name            9             10  ...           22           23  \\\n",
+       "count        26.000000     26.000000  ...    26.000000    26.000000   \n",
+       "mean      16287.980385   4986.158077  ...  3524.363462  3312.208077   \n",
+       "std        4255.639138   7623.931429  ...   100.811151    99.098502   \n",
+       "min       10341.070000      0.000000  ...  3326.570000  3212.190000   \n",
+       "25%       12371.512500      0.000000  ...  3495.497500  3214.850000   \n",
+       "50%       17635.000000      0.000000  ...  3497.090000  3323.910000   \n",
+       "75%       20163.155000  15193.617500  ...  3578.720000  3428.812500   \n",
+       "max       21215.710000  17706.230000  ...  3720.530000  3442.940000   \n",
+       "\n",
+       "EC2-Name           24           25           26           27           28  \\\n",
+       "count       26.000000    26.000000    26.000000    26.000000    26.000000   \n",
+       "mean      1882.269231  2116.760385  2500.714615  2124.892692  2855.731538   \n",
+       "std        597.784729   305.268825   115.815228   329.049851    90.988586   \n",
+       "min       1027.820000  1614.480000  2289.510000  1521.370000  2659.180000   \n",
+       "25%       1488.267500  1864.520000  2513.620000  1881.600000  2846.760000   \n",
+       "50%       1824.825000  2228.735000  2521.665000  2256.960000  2846.760000   \n",
+       "75%       2252.755000  2321.260000  2541.500000  2289.712500  2891.450000   \n",
+       "max       2797.790000  2742.950000  2851.070000  2618.760000  3095.740000   \n",
+       "\n",
+       "EC2-Name           29           30           31  \n",
+       "count       26.000000    26.000000    26.000000  \n",
+       "mean      2668.756923  2887.268077  1246.558846  \n",
+       "std        280.120362  2315.326510    88.978910  \n",
+       "min       1916.040000   718.920000  1117.070000  \n",
+       "25%       2775.860000  1012.965000  1117.200000  \n",
+       "50%       2775.860000  1872.270000  1295.950000  \n",
+       "75%       2775.860000  4849.250000  1313.210000  \n",
+       "max       2775.860000  7205.020000  1329.070000  \n",
+       "\n",
+       "[8 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
    ]
   }
  ],
