--- a/datadog/datadog-by-usage.ipynb
+++ b/datadog/datadog-by-usage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,13 @@
     "import re\n",
     "import time\n",
     "import dateutil\n",
-    "\n",
     "dataUsageType = '/home/joe/data/datadog/by-usage-type.csv'\n",
     "dfUsageType = pd.read_csv(dataUsageType)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +228,7 @@
        "[4 rows x 710 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -257,6 +256,433 @@
    ],
    "source": [
     "dfUsageType.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataUsageTransposed = '/home/joe/data/datadog/by-usage-transposed.csv'\n",
+    "dfUsgT = pd.read_csv(dataUsageTransposed).fillna(0)\n",
+    "dataEC2InstanceOfferings = '/home/joe/data/datadog/ec2_instance_offerings.txt'\n",
+    "dfEC2Offers = pd.read_csv(dataEC2InstanceOfferings,delimiter=\"\\s+\",names=[\"meta\",\"type\",\"region\",\"meta1\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UsageType</th>\n",
+       "      <th>UsageType Total</th>\n",
+       "      <th>Month 3</th>\n",
+       "      <th>Month 2</th>\n",
+       "      <th>Month 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>APS3-DataTransfer-In-Bytes($)</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USW1-APN2-AWS-Out-Bytes($)</td>\n",
+       "      <td>1.737100e-02</td>\n",
+       "      <td>1.450070e-03</td>\n",
+       "      <td>7.504540e-03</td>\n",
+       "      <td>8.416390e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USW1-USE2-AWS-In-Bytes($)</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DeliveryAttempts-SMTP($)</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USW2-NatGateway-Bytes($)</td>\n",
+       "      <td>3.800000e-07</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>3.800000e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>704</th>\n",
+       "      <td>RDS:Multi-AZ-StorageUsage($)</td>\n",
+       "      <td>1.205376e+01</td>\n",
+       "      <td>4.053760e+00</td>\n",
+       "      <td>4.000003e+00</td>\n",
+       "      <td>3.999997e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>705</th>\n",
+       "      <td>APS3-APS1-AWS-Out-Bytes($)</td>\n",
+       "      <td>1.370000e-05</td>\n",
+       "      <td>5.450000e-06</td>\n",
+       "      <td>2.700000e-06</td>\n",
+       "      <td>5.560000e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>706</th>\n",
+       "      <td>HeavyUsage:m3.2xlarge($)</td>\n",
+       "      <td>1.602424e+04</td>\n",
+       "      <td>5.399650e+03</td>\n",
+       "      <td>5.225468e+03</td>\n",
+       "      <td>5.399118e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>707</th>\n",
+       "      <td>USE1-EUC1-AWS-Out-Bytes($)</td>\n",
+       "      <td>1.694964e+03</td>\n",
+       "      <td>6.130664e+02</td>\n",
+       "      <td>5.563949e+02</td>\n",
+       "      <td>5.255029e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>708</th>\n",
+       "      <td>Total cost ($)</td>\n",
+       "      <td>4.655485e+06</td>\n",
+       "      <td>1.554169e+06</td>\n",
+       "      <td>1.492007e+06</td>\n",
+       "      <td>1.609309e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>709 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         UsageType  UsageType Total       Month 3  \\\n",
+       "0    APS3-DataTransfer-In-Bytes($)     0.000000e+00  0.000000e+00   \n",
+       "1       USW1-APN2-AWS-Out-Bytes($)     1.737100e-02  1.450070e-03   \n",
+       "2        USW1-USE2-AWS-In-Bytes($)     0.000000e+00  0.000000e+00   \n",
+       "3         DeliveryAttempts-SMTP($)     0.000000e+00  0.000000e+00   \n",
+       "4         USW2-NatGateway-Bytes($)     3.800000e-07  0.000000e+00   \n",
+       "..                             ...              ...           ...   \n",
+       "704   RDS:Multi-AZ-StorageUsage($)     1.205376e+01  4.053760e+00   \n",
+       "705     APS3-APS1-AWS-Out-Bytes($)     1.370000e-05  5.450000e-06   \n",
+       "706       HeavyUsage:m3.2xlarge($)     1.602424e+04  5.399650e+03   \n",
+       "707     USE1-EUC1-AWS-Out-Bytes($)     1.694964e+03  6.130664e+02   \n",
+       "708                 Total cost ($)     4.655485e+06  1.554169e+06   \n",
+       "\n",
+       "          Month 2       Month 1  \n",
+       "0    0.000000e+00  0.000000e+00  \n",
+       "1    7.504540e-03  8.416390e-03  \n",
+       "2    0.000000e+00  0.000000e+00  \n",
+       "3    0.000000e+00  0.000000e+00  \n",
+       "4    0.000000e+00  3.800000e-07  \n",
+       "..            ...           ...  \n",
+       "704  4.000003e+00  3.999997e+00  \n",
+       "705  2.700000e-06  5.560000e-06  \n",
+       "706  5.225468e+03  5.399118e+03  \n",
+       "707  5.563949e+02  5.255029e+02  \n",
+       "708  1.492007e+06  1.609309e+06  \n",
+       "\n",
+       "[709 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfUsgT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meta</th>\n",
+       "      <th>type</th>\n",
+       "      <th>region</th>\n",
+       "      <th>meta1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>INSTANCETYPEOFFERINGS</td>\n",
+       "      <td>x1e.16xlarge</td>\n",
+       "      <td>us-east-1</td>\n",
+       "      <td>region</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>INSTANCETYPEOFFERINGS</td>\n",
+       "      <td>g4dn.2xlarge</td>\n",
+       "      <td>us-east-1</td>\n",
+       "      <td>region</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>INSTANCETYPEOFFERINGS</td>\n",
+       "      <td>r4.4xlarge</td>\n",
+       "      <td>us-east-1</td>\n",
+       "      <td>region</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>INSTANCETYPEOFFERINGS</td>\n",
+       "      <td>r5a.xlarge</td>\n",
+       "      <td>us-east-1</td>\n",
+       "      <td>region</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>INSTANCETYPEOFFERINGS</td>\n",
+       "      <td>t3.small</td>\n",
+       "      <td>us-east-1</td>\n",
+       "      <td>region</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>INSTANCETYPEOFFERINGS</td>\n",
+       "      <td>r5d.2xlarge</td>\n",
+       "      <td>us-east-1</td>\n",
+       "      <td>region</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>254</th>\n",
+       "      <td>INSTANCETYPEOFFERINGS</td>\n",
+       "      <td>m5a.24xlarge</td>\n",
+       "      <td>us-east-1</td>\n",
+       "      <td>region</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>255</th>\n",
+       "      <td>INSTANCETYPEOFFERINGS</td>\n",
+       "      <td>c5n.18xlarge</td>\n",
+       "      <td>us-east-1</td>\n",
+       "      <td>region</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256</th>\n",
+       "      <td>INSTANCETYPEOFFERINGS</td>\n",
+       "      <td>r5.metal</td>\n",
+       "      <td>us-east-1</td>\n",
+       "      <td>region</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>INSTANCETYPEOFFERINGS</td>\n",
+       "      <td>d2.xlarge</td>\n",
+       "      <td>us-east-1</td>\n",
+       "      <td>region</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>258 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      meta          type     region   meta1\n",
+       "0    INSTANCETYPEOFFERINGS  x1e.16xlarge  us-east-1  region\n",
+       "1    INSTANCETYPEOFFERINGS  g4dn.2xlarge  us-east-1  region\n",
+       "2    INSTANCETYPEOFFERINGS    r4.4xlarge  us-east-1  region\n",
+       "3    INSTANCETYPEOFFERINGS    r5a.xlarge  us-east-1  region\n",
+       "4    INSTANCETYPEOFFERINGS      t3.small  us-east-1  region\n",
+       "..                     ...           ...        ...     ...\n",
+       "253  INSTANCETYPEOFFERINGS   r5d.2xlarge  us-east-1  region\n",
+       "254  INSTANCETYPEOFFERINGS  m5a.24xlarge  us-east-1  region\n",
+       "255  INSTANCETYPEOFFERINGS  c5n.18xlarge  us-east-1  region\n",
+       "256  INSTANCETYPEOFFERINGS      r5.metal  us-east-1  region\n",
+       "257  INSTANCETYPEOFFERINGS     d2.xlarge  us-east-1  region\n",
+       "\n",
+       "[258 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfEC2Offers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>x1e.16xlarge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>g4dn.2xlarge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>r4.4xlarge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>r5a.xlarge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>t3.small</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>r5d.2xlarge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>254</th>\n",
+       "      <td>m5a.24xlarge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>255</th>\n",
+       "      <td>c5n.18xlarge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256</th>\n",
+       "      <td>r5.metal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>d2.xlarge</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>258 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             type\n",
+       "0    x1e.16xlarge\n",
+       "1    g4dn.2xlarge\n",
+       "2      r4.4xlarge\n",
+       "3      r5a.xlarge\n",
+       "4        t3.small\n",
+       "..            ...\n",
+       "253   r5d.2xlarge\n",
+       "254  m5a.24xlarge\n",
+       "255  c5n.18xlarge\n",
+       "256      r5.metal\n",
+       "257     d2.xlarge\n",
+       "\n",
+       "[258 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfEC2Offers = dfEC2Offers.drop(['meta','region','meta1'], axis=1)\n",
+    "dfEC2Offers"
    ]
   }
  ],
